<resources>
    <string name="app_name">VideoYou</string>
    <string name="reFreshMediaStore">刷新媒体库</string>
    <string name="intoDevelopMode">进入开发者调试</string>
    <string name="InterfaceNavigation">界面导航</string>
    <string name="Home">主页</string>
    <string name="setting">设置</string>
    <string name="UtilOptions">功能</string>
    <string name="search">视频搜索</string>
    <string name="Stream">网络串流</string>
    <string name="webdav">WebDav</string>
    <string name="onClickRefreshMedia">已通知系统尝试刷新！\n这将需要数秒的时间\n请耐心等待...</string>
    <string name="notFoundPlayList">本地没有播放列表</string>
    <string name="settingItems">设置项目</string>
    <string name="more">更多</string>
    <string name="fileManager">文件管理</string>
    <string name="lockFile">隐私文件</string>
    <string name="playerBackDialog">播放时退出二次确认</string>
    <string name="playerBackDialogInfo">在播放视频的时候退出会显示弹窗</string>
    <string name="darkMode">深色模式</string>
    <string name="AppTheme">应用主题</string>
    <string name="crash">崩溃了！\n我真的崩溃了！</string>
    <string name="leavePlayerAutoPic">离开播放器自动打开画中画</string>
    <string name="leavePlayerAutoPicInfo">此功能仅限安卓9以上使用</string>
    <string name="keepScreenOn">播放界面常亮</string>
    <string name="keepScreenOnInfo">播放界面屏幕永不自动熄灭</string>
    <string name="playDoneAutoEdit">播放完毕自动退出</string>
    <string name="playDoneAutoEditInfo">在播放完毕时自动退出</string>
    <string name="removePlayList">删除播放列表</string>
    <string name="title_activity_video_player">VideoPlayerActivity</string>
</resources>