<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/isDialog_player_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_centerVertical="true">
            <com.google.android.material.textview.MaterialTextView
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playerBackDialog"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="20dp" />
            <com.google.android.material.textview.MaterialTextView
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playerBackDialogInfo"
                android:layout_marginStart="17dp" />
        </LinearLayout>
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/s_d_b_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25dp"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/isAuto_pic_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="DuplicateIds">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_centerVertical="true">
            <com.google.android.material.textview.MaterialTextView
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leavePlayerAutoPic"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="20dp" />
            <com.google.android.material.textview.MaterialTextView
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leavePlayerAutoPicInfo"
                android:layout_marginStart="17dp" />
        </LinearLayout>
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/s_d_b_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25dp"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</LinearLayout>
